--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,19 +21,19 @@
     <div class="galeria">
         <div class="muestra">
             <a target="_blank" href="img/Habitacion1CamaDoble.jpg"><img src="img/Habitacion1CamaDoble.jpg" alt="Habitacion con cama doble" width="500" height="300"></a>
-            <div class="descripcion">Habitación con cama doble</div>
+            <div class="descripcion">Habitaciones con cama doble</div>
         </div>
         <div class="muestra"> 
             <a target="_blank" href="img/Habitacion1CmaSencilla.jpg"><img src="img/Habitacion1CmaSencilla.jpg" alt="Habitacion con cama sencilla" width="500" height="300"></a>
-            <div class="descripcion">Habitación con cama sencilla</div>
+            <div class="descripcion">Habitaciones con cama sencilla</div>
         </div>
         <div class="muestra">    
             <a target="_blank" href="img/Habitacion2CamaSemidoble.jpg"><img src="img/Habitacion2CamaSemidoble.jpg" alt="Habitacion con dos camas semidobles" width="500" height="300"></a>
-            <div class="descripcion">Habitación con 2 camas semidobles</div>
+            <div class="descripcion">Habitaciones con 2 camas semidobles</div>
         </div>
         <div class="muestra">
             <a target="_blank" href="img/Habitacion2CamaSencilla.jpg"><img src="img/Habitacion2CamaSencilla.jpg" alt="Habitacion con dos camas sencillas" width="500" height="300"></a>
-            <div class="descripcion">Habitación con 2 camas sencillas</div>
+            <div class="descripcion">Habitaciones con 2 camas sencillas</div>
         </div>
     </div>
 </body>
