--- a/frontend/secciones/administrador.html
+++ b/frontend/secciones/administrador.html
@@ -8,6 +8,22 @@
     <title>HotelSys</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="../img/Logo.jpg" alt="HotelSys" class="logo">
+        </div>
+        <nav class="menu">
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+            </ul>
+        </nav>
+    </header>
+    <form action="/action_page.php" class="admin">
+        <label for="correo">Correo:</label><br>
+        <input type="text" id="correo" name="correo" placeholder="Correo electrónico "><br>
+        <label for="contrasena">Contraseña:</label><br>
+        <input type="text" id="contrasena" name="contrasena" placeholder="Ingresa tu contraseña"><br><br>
+        <input type="submit" value="Iniciar Sesión">
+    </form>
 </body>
 </html>
