--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="titulo-subtitulo">
             <h1>Bienvenido a HotelSys</h1>     
-            <h4 class="subtitulo">Donde podrás disfrutar de una estadia de lujo</h4>
+            <h4 class="subtitulo">Donde podrás disfrutar de una estadía de lujo</h4>
         </div>
         <nav class="menu">
             <ul>
@@ -47,9 +47,8 @@
             <div class="descripcion">
                 <p>Habitaciones con 2 camas semidobles</p>
                 <button class="btn-detalles" data-habitacion-id="3">Ver más detalles</button>
-                <div class="detalles-habitacion"></div>
                 <a href="reservas.html" class="btn-reservar">Reservar</a>
-                
+                <div class="detalles-habitacion"></div>
             </div>
         </div>
         <div class="muestra">
@@ -57,9 +56,8 @@
             <div class="descripcion">
                 <p>Habitaciones con 2 camas sencillas</p>
                 <button class="btn-detalles" data-habitacion-id="4">Ver más detalles</button>
-                <div class="detalles-habitacion"></div>
                 <a href="reservas.html" class="btn-reservar">Reservar</a>
-                
+                <div class="detalles-habitacion"></div>
             </div>
         </div>
     </div>
