Funciona disponibilidad de habitaciones

--- a/frontend/reservas.html
+++ b/frontend/reservas.html
@@ -36,9 +36,10 @@
                 <input type="date" id="fecha-salida" name="fecha-salida" required>
             </div>
             <div>
-                <label for="tipo-habitacion">Tipo de Habitación:</label><br>
-                <select id="tipo-habitacion" name="tipo-habitacion">
+                <label for="tipo-habitacion">Tipo de Habitación:</label></br>
+                <select id="tipo-habitacion" name="tipo">
                     <option value="">Todos los tipos</option>
+                    
                 </select>
             </div>
             <button type="submit">Buscar Disponibilidad</button>
