Funciona reservas de habitacion completamente

--- a/frontend/panelAdmin.html
+++ b/frontend/panelAdmin.html
@@ -76,7 +76,7 @@
         <p>© 2025 HotelSys. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="panel-admin.js"></script>
-    <script src="gestion-habitaciones.js"></script> 
+    <script src="panelAdmin.js"></script>
+    <script src="gestionHabitaciones.js"></script> 
 </body>
 </html>
