--- a/frontend/confirmarReserva.html
+++ b/frontend/confirmarReserva.html
@@ -19,6 +19,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
+                <li><a href="ReservasCliente.html">Mis Reservas</a></li>
                 <li><a href="reservas.html">Volver a Búsqueda</a></li>
             </ul>
         </nav>
