--- a/frontend/reservas.html
+++ b/frontend/reservas.html
@@ -19,6 +19,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
+                <li><a href="ReservasCliente.html">Mis Reservas</a></li>
                 <li><a href="administrador.html">Administrador</a></li>
             </ul>
         </nav>
