Carrusel, CSS (header y footer)

--- a/frontend/reservas.html
+++ b/frontend/reservas.html
@@ -52,8 +52,44 @@
         </div>
     </main>
     
-    <footer>
-        <p>© 2025 HotelSys. Todos los derechos reservados.</p>
+    <footer id="contacto" class="bg-dark-text text-white py-12 md:py-16">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="grid grid-cols-2 md:grid-cols-3 gap-8 mb-10 border-b border-gray-700 pb-8">
+                <!-- Columna 1: Logo y Contacto -->
+                <div>
+                    <span class="text-2xl font-extrabold text-white mb-4 block">HotelSys</span>
+                    <p class="text-sm text-gray-400 mb-3">Dirección: Calle 8a #24-26, Ibague-Tolima, Colombia</p>
+                    <p class="text-sm text-gray-400 mb-3">Teléfono: +57 3157946002</p>
+                    <p class="text-sm text-gray-400">Email: informacion@hotelsys.com</p>
+                </div>
+
+                <!-- Columna 2: Navegación Rápida -->
+                <div>
+                    <h4 class="text-lg font-semibold mb-4 text-primary-blue">Explorar</h4>
+                    <ul class="space-y-2">
+                        <li><a href="index.html" class="text-sm text-gray-400 hover:text-white transition">Inicio</a></li>
+                        <li><a href="reservas.html" class="text-sm text-gray-400 hover:text-white transition">Reservaciones</a></li>
+                        <li><a href="ReservasCliente.html" class="text-sm text-gray-400 hover:text-white transition">Cancelacion de Reservas</a></li>
+                        <li><a href="administrador.html" class="text-sm text-gray-400 hover:text-white transition">Administrador</a></li>
+                    </ul>
+                </div>
+
+                <!-- Columna 3: Información Legal -->
+                <div>
+                    <h4 class="text-lg font-semibold mb-4 text-primary-blue">Legal</h4>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-sm text-gray-400 hover:text-white transition">Política de Privacidad</a></li>
+                        <li><a href="#" class="text-sm text-gray-400 hover:text-white transition">Términos y Condiciones</a></li>
+                        <li><a href="#" class="text-sm text-gray-400 hover:text-white transition">Política de Cancelación</a></li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="text-center pt-4">
+                <p class="text-sm text-gray-500">&copy; 2025 HotelSys. Todos los derechos reservados.</p>
+            </div>
+        </div>
     </footer>
 
     <script src="reservas.js"></script>
