--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,47 +24,68 @@
             </ul>
         </nav>
     </header>
-    <div class="galeria">
-        <div class="muestra">
-            <a target="_blank" href="img/Habitacion1CamaDoble.jpg"><img src="img/Habitacion1CamaDoble.jpg" alt="Habitacion con cama doble" width="500" height="300"></a>
-            <div class="descripcion">
-                <p>Habitaciones con cama doble</p>
-                <button class="btn-detalles" data-habitacion-id="1">Ver más detalles</button>
-                <a href="reservas.html" class="btn-reservar">Reservar</a>
-                <div class="detalles-habitacion"></div>
+    <div class="carousel-container">
+        <div class="carousel-slides">
+            <div class="carousel-slide">
+                <img src="img/Habitacion1CamaDoble.jpg" alt="Habitación con cama doble">
+                <div class="carousel-caption">Habitaciones con cama doble</div>
+            </div>
+            <div class="carousel-slide">
+                <img src="img/Habitacion1CmaSencilla.jpg" alt="Habitación con cama sencilla">
+                <div class="carousel-caption">Habitaciones con cama sencilla</div>
+            </div>
+            <div class="carousel-slide">
+                <img src="img/Habitacion2CamaSemidoble.jpg" alt="Habitación con dos camas semidobles">
+                <div class="carousel-caption">Habitaciones con 2 camas semidobles</div>
+            </div>
+            <div class="carousel-slide">
+                <img src="img/Habitacion2CamaSencilla.jpg" alt="Habitación con dos camas sencillas">
+                <div class="carousel-caption">Habitaciones con 2 camas sencillas</div>
             </div>
         </div>
-        <div class="muestra"> 
-            <a target="_blank" href="img/Habitacion1CmaSencilla.jpg"><img src="img/Habitacion1CmaSencilla.jpg" alt="Habitacion con cama sencilla" width="500" height="300"></a>
-            <div class="descripcion">
-                <p>Habitaciones con cama sencilla</p>
-                <button class="btn-detalles" data-habitacion-id="2">Ver más detalles</button>
-                <a href="reservas.html" class="btn-reservar">Reservar</a>
-                <div class="detalles-habitacion"></div>
-            </div>
-        </div>
-        <div class="muestra">    
-            <a target="_blank" href="img/Habitacion2CamaSemidoble.jpg"><img src="img/Habitacion2CamaSemidoble.jpg" alt="Habitacion con dos camas semidobles" width="500" height="300"></a>
-            <div class="descripcion">
-                <p>Habitaciones con 2 camas semidobles</p>
-                <button class="btn-detalles" data-habitacion-id="3">Ver más detalles</button>
-                <a href="reservas.html" class="btn-reservar">Reservar</a>
-                <div class="detalles-habitacion"></div>
-            </div>
-        </div>
-        <div class="muestra">
-            <a target="_blank" href="img/Habitacion2CamaSencilla.jpg"><img src="img/Habitacion2CamaSencilla.jpg" alt="Habitacion con dos camas sencillas" width="500" height="300"></a>
-            <div class="descripcion">
-                <p>Habitaciones con 2 camas sencillas</p>
-                <button class="btn-detalles" data-habitacion-id="4">Ver más detalles</button>
-                <a href="reservas.html" class="btn-reservar">Reservar</a>
-                <div class="detalles-habitacion"></div>
-            </div>
-        </div>
+        <button class="carousel-prev">&#10094;</button>
+        <button class="carousel-next">&#10095;</button>
     </div>
     <script src="script.js"></script>
-    <footer>
-        <p>© 2025 HotelSys. Todos los derechos reservados.</p>
+    <footer id="contacto" class="bg-dark-text text-white py-12 md:py-16">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="grid grid-cols-2 md:grid-cols-3 gap-8 mb-10 border-b border-gray-700 pb-8">
+                <!-- Columna 1: Logo y Contacto -->
+                <div>
+                    <span class="text-2xl font-extrabold text-white mb-4 block">HotelSys</span>
+                    <p class="text-sm text-gray-400 mb-3">Dirección: Calle 8a #24-26, Ibague-Tolima, Colombia</p>
+                    <p class="text-sm text-gray-400 mb-3">Teléfono: +57 3157946002</p>
+                    <p class="text-sm text-gray-400">Email: informacion@hotelsys.com</p>
+                </div>
+
+                <!-- Columna 2: Navegación Rápida -->
+                <div>
+                    <h4 class="text-lg font-semibold mb-4 text-primary-blue">Explorar</h4>
+                    <ul class="space-y-2">
+                        <li><a href="index.html" class="text-sm text-gray-400 hover:text-white transition">Inicio</a></li>
+                        <li><a href="reservas.html" class="text-sm text-gray-400 hover:text-white transition">Reservaciones</a></li>
+                        <li><a href="ReservasCliente.html" class="text-sm text-gray-400 hover:text-white transition">Cancelacion de Reservas</a></li>
+                        <li><a href="administrador.html" class="text-sm text-gray-400 hover:text-white transition">Administrador</a></li>
+                    </ul>
+                </div>
+
+                <!-- Columna 3: Información Legal -->
+                <div>
+                    <h4 class="text-lg font-semibold mb-4 text-primary-blue">Legal</h4>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-sm text-gray-400 hover:text-white transition">Política de Privacidad</a></li>
+                        <li><a href="#" class="text-sm text-gray-400 hover:text-white transition">Términos y Condiciones</a></li>
+                        <li><a href="#" class="text-sm text-gray-400 hover:text-white transition">Política de Cancelación</a></li>
+                    </ul>
+                </div>
+
+                
+            </div>
+
+            <div class="text-center pt-4">
+                <p class="text-sm text-gray-500">&copy; 2025 HotelSys. Todos los derechos reservados.</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
