--- a/frontend/reservas.html
+++ b/frontend/reservas.html
@@ -43,7 +43,9 @@
                     
                 </select>
             </div>
-            <button type="submit">Buscar Disponibilidad</button>
+            <div class="form-submit-container">
+                <button type="submit">Buscar Disponibilidad</button>
+            </div>
         </form>
 
         <div id="resultados-disponibilidad" class="galeria">
@@ -57,7 +59,7 @@
             <div class="grid grid-cols-2 md:grid-cols-3 gap-8 mb-10 border-b border-gray-700 pb-8">
                 <!-- Columna 1: Logo y Contacto -->
                 <div>
-                    <span class="text-2xl font-extrabold text-white mb-4 block">HotelSys</span>
+                    <span class="text-2xl font-extrabold text-primary-blue mb-4 block">HotelSys</span>
                     <p class="text-sm text-gray-400 mb-3">Dirección: Calle 8a #24-26, Ibague-Tolima, Colombia</p>
                     <p class="text-sm text-gray-400 mb-3">Teléfono: +57 3157946002</p>
                     <p class="text-sm text-gray-400">Email: informacion@hotelsys.com</p>
