--- a/frontend/confirmarReserva.html
+++ b/frontend/confirmarReserva.html
@@ -42,7 +42,9 @@
             <input type="email" id="email-cliente" name="email-cliente" required><br>
             <label for="telefono">Teléfono:</label><br>
             <input type="tel" id="telefono" name="telefono" required><br>
-            <button type="submit">Confirmar y Reservar</button>
+            <div class="form-submit-container">
+                <button type="submit">Confirmar y Reservar</button>
+            </div>
         </form>
         <div id="mensaje-confirmacion" style="margin-top: 20px;"></div>
     </main>
@@ -52,7 +54,7 @@
             <div class="grid grid-cols-2 md:grid-cols-3 gap-8 mb-10 border-b border-gray-700 pb-8">
                 <!-- Columna 1: Logo y Contacto -->
                 <div>
-                    <span class="text-2xl font-extrabold text-white mb-4 block">HotelSys</span>
+                    <span class="text-2xl font-extrabold text-primary-blue mb-4 block">HotelSys</span>
                     <p class="text-sm text-gray-400 mb-3">Dirección: Calle 8a #24-26, Ibague-Tolima, Colombia</p>
                     <p class="text-sm text-gray-400 mb-3">Teléfono: +57 3157946002</p>
                     <p class="text-sm text-gray-400">Email: informacion@hotelsys.com</p>
